<resources>
    <string name="app_name">MyMobility</string>
    <string name="menu_order">Orders</string>
    <string name="menu_place_an_order">•Select a destination and place order</string>
    <string name="menu_active_orders">•Active Orders</string>
    <string name="menu_order_history">•Order History</string>
    <string name="menu_my_account">My Account</string>
    <string name="menu_my_profile">•My Profile</string>
    <string name="menu_notifications">•Notifications</string>
    <string name="menu_rider_rewards">•Rider Rewards</string>
    <string name="menu_deactivate_my_account">•Deactivate My Account</string>
    <string name="menu_retail">Retail</string>
    <string name="menu_shop_online">•Shop Online</string>
    <string name="menu_information">Information</string>
    <string name="menu_faqs">•FAQs</string>
    <string name="menu_give_feedback">•Give Feedback</string>
    <string name="menu_privacy_and_security_statement">•Privacy and Security Statement</string>
    <string name="menu_do_not_sell_my_personal_information">•Do Not Sell My Personal Information</string>
    <string name="menu_terms_of_use">•Terms of Use</string>
    <string name="menu_about">•About</string>
    <string name="menu_contact_customer_service">•Contact Customer Service</string>
    <string name="menu_sign_out">Sign Out</string>
    <string name="menu_report_a_bug">Report a Bug</string>
    <string name="menu_version_number">Version Numbe</string>
    <string name="back">Back</string>
    <string name="order_number">Order Number: %1$s</string>
    <string name="price">$ %1$s /</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="battery_level">Battery Level</string>
    <string name="extend_my_rental">Extend My Rental</string>
    <string name="return_my_rental">Return My Rental</string>
    <string name="equipment_id">Equipment ID: %1$s</string>
    <string name="enter_your_equipment_id"><u>Enter Your Equipment Id</u></string>
    <string name="validation_return_rental_device_link_is_not_available_for_this_order">Return Rental Device link is not available for this order</string>
    <string name="active_orders">Active Orders</string>
    <string name="you_have_no_current_active_orders">You have no current Active Orders</string>
    <string name="confirm_your_rental_device_has_been_returned">Confirm your rental device has been returned</string>
    <string name="activate_your_camera_and_snap_a_photo_of_your_device">Activate your camera and snap a photo of your device including the background of the designated return location. The photo submission will assist MOBILITY ON WHEELS in recovering the device, concluding your rental, and prevent additional charges to your credit card. Thank you!</string>
    <string name="submit_photo">Submit Photo</string>
    <string name="hint_first_name"><![CDATA[<font color=#878787>First Name</font> <font color=#ED1C24>*</font>]]></string>
    <string name="hint_last_name"><![CDATA[<font color=#878787>Last Name</font> <font color=#ED1C24>*</font>]]></string>
    <string name="hint_street_address"><![CDATA[<font color=#878787>Street Address</font> <font color=#ED1C24>*</font>]]></string>
    <string name="hint_town_city"><![CDATA[<font color=#878787>Town/City</font> <font color=#ED1C24>*</font>]]></string>
    <string name="hint_state"><![CDATA[<font color=#878787>State</font> <font color=#ED1C24>*</font>]]></string>
    <string name="hint_zip"><![CDATA[<font color=#878787>Zip</font> <font color=#ED1C24>*</font>]]></string>
    <string name="hint_cell_number"><![CDATA[<font color=#878787>Cell Number</font> <font color=#ED1C24>*</font>]]></string>
    <string name="hint_email"><![CDATA[<font color=#878787>Email</font> <font color=#ED1C24>*</font>]]></string>
    <string name="hint_credit_card_type"><![CDATA[<font color=#878787>Credit Card Type</font> <font color=#ED1C24>*</font>]]></string>
    <string name="hint_card_number"><![CDATA[<font color=#878787>Card Number</font> <font color=#ED1C24>*</font>]]></string>
    <string name="hint_expiration_month"><![CDATA[<font color=#878787>Expiration Month</font> <font color=#ED1C24>*</font>]]></string>
    <string name="hint_expiration_year"><![CDATA[<font color=#878787>Expiration Year</font> <font color=#ED1C24>*</font>]]></string>
    <string name="hint_cvv"><![CDATA[<font color=#878787>CVV</font> <font color=#ED1C24>*</font>]]></string>
    <string name="hint_phone">Phone (XXX)XXX-XXXX</string>
    <string name="hint_apartment">Apartment, suite, unit etc. (optional)</string>
    <string name="bank_name"><![CDATA[<font color=#878787>Bank Name</font> <font color=#ED1C24>*</font>]]></string>
    <string name="bank_account_type"><![CDATA[<font color=#878787>Bank Account Type</font> <font color=#ED1C24>*</font>]]></string>
    <string name="account_number"><![CDATA[<font color=#878787>Account Number</font> <font color=#ED1C24>*</font>]]></string>
    <string name="confirm_account_number"><![CDATA[<font color=#878787>Confirm Account Number</font> <font color=#ED1C24>*</font>]]></string>
    <string name="confirm_routing_number"><![CDATA[<font color=#878787>Confirm Routing Number</font> <font color=#ED1C24>*</font>]]></string>
    <string name="routing_number"><![CDATA[<font color=#878787>Routing Number</font> <font color=#ED1C24>*</font>]]></string>
    <string name="select_state">Select state</string>
    <string name="select_bank_account_type">Select Bank Account Type</string>
    <string name="select_month">Expiry Month</string>
    <string name="select_year">Expiry Year</string>
    <string name="select_card">Select Card</string>
    <string name="credit_debit_card_details">Credit/Debit\nCard Details</string>
    <string name="add_credit_debit_card">Add Credit/Debit Card</string>
    <string name="save_payment_method">Save Payment Method</string>
    <string name="return_to_reservation">Return to Reservation</string>
    <string-array name="card_type_options">
        <item>Visa</item>
        <item>American Express</item>
        <item>MasterCard</item>
        <item>Discover</item>
    </string-array>
    <string-array name="month_options">
        <item>Jan</item>
        <item>Feb</item>
        <item>Mar</item>
        <item>Apr</item>
        <item>May</item>
        <item>June</item>
        <item>July</item>
        <item>Aug</item>
        <item>Sep</item>
        <item>Oct</item>
        <item>Nov</item>
        <item>Dec</item>
    </string-array>
    <string-array name="country_options">
        <item>USA</item>
        <item>Other</item>
    </string-array>
    <string-array name="country_options_with_one_country">
        <item>USA</item>
        <item>Other</item>

    </string-array>
    <string name="validation_please_enter_cvv">Please enter CVV</string>
    <string name="validation_please_select_expiry_year">Please select expiry year</string>
    <string name="validation_please_select_expiry_month">Please select expiry month</string>
    <string name="validation_please_enter_card_number">Please enter card number</string>
    <string name="validation_please_select_card_type">Please select card type</string>
    <string name="validation_please_enter_email_address">Please enter email address</string>
    <string name="validation_please_enter_mobile_cell_phone">Please enter Mobile/Cell phone</string>
    <string name="validation_please_enter_zip_code">Please enter zip code</string>
    <string name="validation_please_select_state">Please select state.</string>
    <string name="validation_please_enter_town_city">Please enter Town/City</string>
    <string name="validation_please_enter_street_address">Please enter street address</string>
    <string name="validation_please_enter_last_name">Please enter last name</string>
    <string name="validation_please_enter_first_name">Please enter first name</string>
    <string name="validation_please_enter_bank_name">Please enter bank name</string>
    <string name="validation_please_select_bank_account_type">Please select bank account type</string>
    <string name="validation_please_enter_account_number">Please enter account number</string>
    <string name="validation_please_enter_confirm_account_number">Please enter Confirm Account Number</string>
    <string name="validation_confirm_account_number_doesnt_match">Confirm account number doesn\'t matched</string>
    <string name="validation_please_enter_routing_number">Please enter routing number</string>
    <string name="validation_please_enter_confirm_routing_number">Please enter Confirm Routing Number</string>
    <string name="validation_confirm_routing_number_doesnt_match">Confirm routing number doesn\'t matched</string>
    <string name="hint_height_ft"><![CDATA[<font color=#878787>Height (ft.)</font> <font color=#ED1C24>*</font>]]></string>
    <string name="hint_height_in"><![CDATA[<font color=#878787>Height (in.)</font> <font color=#ED1C24>*</font>]]></string>
    <string name="hint_weight_lbs"><![CDATA[<font color=#878787>Weight (in lbs.)</font> <font color=#ED1C24>*</font>]]></string>
    <string name="hint_middle_name">Middle Name</string>
    <string name="select_height_ft">Select Height (ft.)</string>
    <string name="select_height_in">Select Height (in.)</string>
    <string name="add_occupant_for_operator">Add Occupant for Operator</string>
    <string name="if_operator_and_occupant_are_same">If Operator and Occupant are same</string>
    <string name="note_this_will_override_your_existing_default_occupant">Note : This will override your existing default Occupant</string>
    <string-array name="height_ft">
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
    </string-array>
    <string-array name="height_in">
        <item>00</item>
        <item>01</item>
        <item>02</item>
        <item>03</item>
        <item>04</item>
        <item>05</item>
        <item>06</item>
        <item>07</item>
        <item>08</item>
        <item>09</item>
        <item>10</item>
        <item>11</item>
    </string-array>
    <string name="validation_please_select_height_in">Please select Height (in.).</string>
    <string name="validation_weight_is_required">Weight is required.</string>
    <string name="validation_please_select_height_ft">Please select Height (ft.).</string>
    <string name="validation_last_name_is_required">Last Name is required.</string>
    <string name="validation_first_name_is_required">First Name is required.</string>
    <string name="manage_occupant_for_operator">Manage Occupant For Operator</string>
    <string name="add_existing_occupant">Add Existing Occupant</string>
    <string name="add_new_occupant">Add new Occupant</string>
    <string name="operator_list">Operator List</string>
    <string name="cancel">Cancel</string>
    <string name="i_agree">I Agree</string>
    <string name="hint_cell_phone">Cell Phone</string>
    <string name="welcome">Welcome</string>
    <string name="log_in_to_continue">Log in to continue!</string>
    <string name="enter_the_cell_phone_number_linked_to_your_account">Enter the cell phone number linked to your account</string>
    <string name="retrieve_cell_phone_number">Retrieve cell phone number</string>
    <string name="help_q">Help?</string>
    <string name="i_agree_to_the_terms_of_use">I agree to the Terms of use</string>
    <string name="login">Login</string>
    <string name="i_m_a_new_user_create_account">I’m a new user. Create Account</string>
    <string name="create_an_account">Create an Account</string>
    <string name="hint_please_enter_a_occupant_name">Please enter a Occupant Name</string>
    <string name="search_occupant">Search Occupant</string>
    <string name="select">Select</string>
    <string name="occupant_name_">Occupant Name</string>
    <string name="operator_name_">Operator Name</string>
</resources>