<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.core.widget.NestedScrollView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintBottom_toTopOf="@+id/textViewLogin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.LinearLayoutCompat
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewLblWelcome"
                    style="@style/BarlowExtraBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/welcome"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_size_100" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewLblSignInToContinue"
                    style="@style/BarlowBold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="8dp"
                    android:text="@string/log_in_to_continue"
                    android:textColor="@color/colorGray"
                    android:textSize="@dimen/txt_size_60" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewLblEnterCellPhoneNumber"
                    style="@style/BarlowMedium"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:padding="16dp"
                    android:text="@string/enter_the_cell_phone_number_linked_to_your_account"
                    android:textColor="@color/black"
                    android:textSize="@dimen/txt_size_40" />

                <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginEnd="16dp"
                    app:hintTextColor="@color/colorGray"
                    >
                    <androidx.appcompat.widget.AppCompatEditText
                        android:id="@+id/editTextPhoneNumer"
                        style="@style/BarlowMedium"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:hint="@string/hint_cell_phone"
                        android:inputType="number"
                        android:maxLines="1"
                        android:maxLength="13"
                        android:paddingTop="16dp"
                        android:paddingBottom="16dp"
                        android:singleLine="true"
                        android:textColor="@color/black"
                        android:textSize="@dimen/txt_size_40" />
                </com.google.android.material.textfield.TextInputLayout>



                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewLblRetrievNumber"
                    style="@style/BarlowMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:padding="16dp"
                    android:text="@string/retrieve_cell_phone_number"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/txt_size_40" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/textViewLblHelp"
                    style="@style/BarlowMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="end"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:text="@string/help_q"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/txt_size_40" />

                <androidx.appcompat.widget.AppCompatCheckBox
                    android:id="@+id/checkboxIAgreeToThe"
                    style="@style/BarlowMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:button="@drawable/mow_ckeckbox_selector"
                    android:paddingStart="8dp"
                    android:text="@string/i_agree_to_the_terms_of_use"
                    android:textColor="@color/dark_blue"
                    android:textSize="@dimen/txt_size_40"
                    android:visibility="gone"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textViewLblHelp" />


            </androidx.appcompat.widget.LinearLayoutCompat>
        </androidx.core.widget.NestedScrollView>


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewLogin"
            style="@style/BarlowMedium"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:background="@drawable/bg_mow_rounded_blue_button"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/login"
            android:elevation="4dp"
            android:textColor="@color/white"
            android:textSize="@dimen/txt_size_50"
            app:layout_constraintBottom_toTopOf="@+id/textViewReportBug"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textViewReportBug"
            style="@style/BarlowMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawableStart="@drawable/ic_mow_menu_report_bug"
            android:drawablePadding="8dp"
            android:gravity="center_horizontal"
            android:padding="16dp"
            android:text="@string/menu_report_a_bug"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/txt_size_50"
            app:layout_constraintBottom_toTopOf="@+id/textviewCreateAccount"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/textviewCreateAccount"
            style="@style/BarlowMedium"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/i_m_a_new_user_create_account"
            android:textSize="@dimen/txt_size_50"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
