<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:id="@+id/frameLayoutToolbar"
            android:layout_width="0dp"
            android:layout_height="56dp"
            android:background="@color/dark_blue"
            android:elevation="4dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BarlowRegular"
                android:id="@+id/textViewBack"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/back"
                android:layout_marginStart="16dp"
                android:drawablePadding="-10dp"
                android:gravity="center_vertical"
                android:layout_gravity="center_vertical"
                android:textColor="@color/white"
                android:drawableStart="@drawable/ic_back"
                android:textSize="@dimen/txt_size_50"
                />

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/imageViewHome"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp"
                android:layout_gravity="end"
                android:src="@drawable/ic_home" />

        </FrameLayout>

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/appCompatTextView2"
            style="@style/BarlowExtraBold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:paddingStart="16dp"
            android:paddingTop="8dp"
            android:paddingEnd="16dp"
            android:paddingBottom="8dp"
            android:text="@string/search_occupant"
            android:textColor="@color/colorBlack"
            android:textSize="@dimen/txt_size_100"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/frameLayoutToolbar" />


        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/editTextSearch"
            style="@style/BarlowRegular"
            android:layout_width="0dp"
            android:layout_height="48dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:background="@drawable/bg_mow_rounded_corner_rectangle_gray"
            android:drawableEnd="@drawable/ic_mow_search"
            android:hint="@string/hint_please_enter_a_occupant_name"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:maxLines="1"
            android:padding="12dp"
            android:singleLine="true"
            android:textColor="@color/colorGraytext2"
            android:textSize="@dimen/txt_size_45"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/appCompatTextView2" />

        <androidx.appcompat.widget.LinearLayoutCompat
            android:id="@+id/linearLayoutHeader"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="16dp"
            android:weightSum="5"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/editTextSearch">

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BarlowMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/select"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_50" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BarlowMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/occupant_name_"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_50" />

            <androidx.appcompat.widget.AppCompatTextView
                style="@style/BarlowMedium"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/operator_name_"
                android:textColor="@color/black"
                android:textSize="@dimen/txt_size_50" />

        </androidx.appcompat.widget.LinearLayoutCompat>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycleViewItems"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutHeader"
            tools:listitem="@layout/item_mow_search_occupant" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
