<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <im.delight.android.webview.AdvancedWebView
                android:id="@+id/webViewContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />


            <RelativeLayout
                android:background="@color/white"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/texViewCancel"
                    style="@style/BarlowMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:gravity="center"
                    android:padding="16dp"
                    android:text="@string/cancel"
                    android:textColor="@color/colorRed"
                    android:textSize="@dimen/txt_size_50" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/texViewBack"
                    style="@style/BarlowMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_toEndOf="@+id/texViewCancel"
                    android:padding="16dp"
                    android:text="@string/back"
                    android:textColor="@color/colorBlueText"
                    android:textSize="@dimen/txt_size_50" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/texViewAgree"
                    style="@style/BarlowMedium"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentEnd="true"
                    android:layout_centerVertical="true"
                    android:background="@drawable/bg_mow_rounded_green_button"
                    android:elevation="4dp"
                    android:paddingStart="16dp"
                    android:paddingTop="8dp"
                    android:paddingEnd="16dp"
                    android:paddingBottom="8dp"
                    android:layout_marginEnd="10dp"

                    android:text="@string/i_agree"
                    android:textColor="@color/colorWhite"
                    android:textSize="@dimen/txt_size_50" />
            </RelativeLayout>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.core.widget.NestedScrollView>


</layout>
